# specialized-dispatch

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
examples/: pass_args.rs  serde_like_example.rs  simple_example.rs  trait_bound.rs
src/: lib.rs
tests/: integration_test.rs
