[package]
name = "specialized-dispatch"
description = "A library for dispatching specialized versions of a function"
version = "0.1.1"
authors = ["Omer Ozarslan"]
edition = "2021"
repository = "https://github.com/ozars/specialized-dispatch"
license = "MIT"

[lib]
proc-macro = true
doctest = false

[dependencies]
proc-macro2 = { version = "1.0" }
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
